# object_detection

./: CMakeLists.txt  README.md  output.pcd  package.xml
PCLfile/: Duplo.pcd  plane.pcd
include/mypkg/: ObjWidget.h~  QtOpenCV.h~
msg/: Object.msg  Object.msg~  Object3D.msg  Object3D.msg~
src/: Essai.cpp~  Main.cpp  MultipleObjectTrackingKinect.cpp  MultipleObjectTrackingKinect.h  Object.cpp  Object.h
src/ColorTrackingEssaiKinect/: MultipleObjectTrackingEssaiKinect.cpp  Object.cpp
src/ColorTrackingEssaiKinectGazebo/: CreateBox.cpp  CreateBoxRviz.cpp  MultipleObjectTrackingEssaiKinect.cpp  Object.cpp
src/ColorTrackingV1.5/: MultipleObjectTrackingKinect2.cpp  Object.cpp
src/ColorTrackingV1/CodeWorking/: MultipleObjectTrackingKinect.cpp
src/ColorTrackingV2/: MultipleObjectTrackingKinect2 (copy).cpp  MultipleObjectTrackingKinect2.cpp  Object.cpp
src/OLD/: Suscriber_Video.cpp  Suscriber_findobject3d.cpp  Tuto.cpp  TutoCannyThreshold.cpp  TutoThreshold.cpp  essai.cpp  multipleObjectTracking.cpp
src/PointCloud/: Border.cpp  BorderTuto.cpp  ObjectRecognition.cpp  RemovingOutliners.cpp  Segmentation.cpp  cluster.cpp  colorCloud.cpp  pcd_write.cpp  smooth.cpp
